@@ -1,10 +1,9 @@
 package epam.task.gymbootdb.controller.impl;
 
-import epam.task.gymbootdb.dto.TraineeTrainingsRequest;
-import epam.task.gymbootdb.dto.TrainerTrainingsRequest;
-import epam.task.gymbootdb.dto.TrainingDto;
+import epam.task.gymbootdb.dto.*;
 import epam.task.gymbootdb.service.TrainingService;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,6 +12,9 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 
 import java.util.List;
 
@@ -27,10 +29,18 @@ class TrainingControllerImplTest {
 
     @Mock
     private TrainingService trainingService;
+    @Mock
+    private Authentication authentication;
+    @Mock
+    private SecurityContext securityContext;
 
     private static final TrainingDto trainingDto = TrainingDto.builder().id(1).build();
-    private static final long TRAINEE_ID = 1L;
-    private static final long TRAINER_ID = 2L;
+    private static final String USERNAME = "Joe";
+
+    @BeforeEach
+    void setUp() {
+        setUpSecurityContext();
+    }
 
     @Test
     void testCreateTraining() {
@@ -49,45 +59,39 @@ class TrainingControllerImplTest {
     @Test
     void testGetTraineeTrainings() {
         List<TrainingDto> trainings = List.of(trainingDto);
-        TraineeTrainingsRequest request = TraineeTrainingsRequest.builder()
-                .traineeId(TRAINEE_ID)
-                .build();
 
-        when(trainingService.getTraineeTrainings(request)).thenReturn(trainings);
+        when(trainingService.getTraineeTrainings(any())).thenReturn(trainings);
 
-        ResponseEntity<List<TrainingDto>> response = trainingController.getTraineeTrainings(TRAINEE_ID,
-                null, null, null, null);
+        ResponseEntity<List<TrainingDto>> response = trainingController.getTraineeTrainings(null, null,
+                null, null);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        assertEquals(trainingDto, response.getBody().get(0));
+        assertEquals(trainingDto, response.getBody().getFirst());
     }
 
     @Test
     void testGetTraineeTrainingsNoResponse() {
         when(trainingService.getTraineeTrainings(any())).thenThrow(new RuntimeException());
 
-        assertThrows(RuntimeException.class, () -> trainingController.getTraineeTrainings(TRAINEE_ID,
-                null, null, null, null));
+        assertThrows(RuntimeException.class, () -> trainingController.getTraineeTrainings(null, null,
+                null, null));
     }
 
     @Test
     void testGetTrainerTrainings() {
         List<TrainingDto> trainings = List.of(trainingDto);
-        TrainerTrainingsRequest request = TrainerTrainingsRequest.builder()
-                .trainerId(TRAINER_ID)
-                .build();
 
-        when(trainingService.getTrainerTrainings(request)).thenReturn(trainings);
+        when(trainingService.getTrainerTrainings(any())).thenReturn(trainings);
 
         ResponseEntity<List<TrainingDto>> response =
-                trainingController.getTrainerTrainings(TRAINER_ID, null, null, null);
+                trainingController.getTrainerTrainings(null, null, null);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        assertEquals(trainingDto, response.getBody().get(0));
+        assertEquals(trainingDto, response.getBody().getFirst());
     }
 
     @Test
@@ -95,6 +99,12 @@ class TrainingControllerImplTest {
         when(trainingService.getTrainerTrainings(any())).thenThrow(new RuntimeException());
 
         assertThrows(RuntimeException.class,
-                () -> trainingController.getTrainerTrainings(TRAINER_ID, null, null, null));
+                () -> trainingController.getTrainerTrainings(null, null, null));
+    }
+
+    private void setUpSecurityContext() {
+        SecurityContextHolder.setContext(securityContext);
+        lenient().when(securityContext.getAuthentication()).thenReturn(authentication);
+        lenient().when(authentication.getName()).thenReturn(USERNAME);
     }
 }
